config/samples/meridio_v1alpha1_gateway.yaml
apiVersion: meridio.nordix.org/v1alpha1
kind: Gateway
metadata:
  labels:
    trench: trench-a
  name: gateway1
spec:
  address: 2.3.4.5
  bgp:
    remote-asn: 2000
    local-asn: 2001
    hold-time: 24s
---
apiVersion: meridio.nordix.org/v1alpha1
kind: Gateway
metadata:
  labels:
    trench: trench-a
  name: gateway2
spec:
  address: 1000::1
  bgp:
    remote-asn: 3000
    local-asn: 2001
    bfd:
      switch: true
---
apiVersion: meridio.nordix.org/v1alpha1
kind: Gateway
metadata:
  labels:
    trench: trench-a
  name: gateway3
spec:
  address: 1.2.3.4
  protocol: static
